Cambios relevantes antes de la v1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Stepwise — Plataforma de análisis de pisada y panel clínico</title>
 
     <!-- Favicon (ICO generado) -->
-    <link rel="icon" href="/favicon.ico" type="image/x-icon" sizes="any" />
+    <link rel="icon" href="/public/favicon.ico" type="image/x-icon" sizes="any" />
 
     <!-- Color del tema (auto clarea en light y oscurece en dark) -->
     <meta name="theme-color" media="(prefers-color-scheme: light)" content="#ffffff" />
